@@ -1,5 +1,11 @@
 2001-12-14  Marcus Brinkmann  <marcus@g10code.de>
 
+	* assuan-buffer.c (_assuan_read_line): New variable ATTICLEN, use
+	it to save the number of bytes left over after the complete line.
+	Rediddle the code a bit to make it more clear what happens.
+
+2001-12-14  Marcus Brinkmann  <marcus@g10code.de>
+
 	* assuan-defs.h (LINELENGTH): Define as ASSUAN_LINELENGTH.
 	assuan.h: Define ASSUAN_LINELENGTH.
 
